java_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 5min-dbcheck
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 5min-dbcheck
  template:
    metadata:
      labels:
        app: 5min-dbcheck
    spec:
      containers:
      - name: 5min-dbcheck
        image: ericgregory/5min-dbcheck:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets
          mountPath: "usr/src/app/secrets"
      volumes:
        - name: secrets
          secret:
            secretName: mysqlpwd
            defaultMode: 0400
