java_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 5min-dbcheck
spec:
  selector:
    app: 5min-dbcheck
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
